--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sveltekit",
+	"name": "famicomparty",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -10,8 +10,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^2.0.3",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-static": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -22,7 +23,7 @@
 		"sass": "^1.69.5",
 		"svelte": "^4.0.5",
 		"svelte-preprocess": "^5.0.4",
-		"vite": "^4.4.2",
+		"vite": "^5.0.0",
 		"vite-imagetools": "^6.2.1"
 	},
 	"type": "module",
